--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/mattdesl"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "canvas-sketch": "^0.7.4",
     "canvas-sketch-cli": "^1.11.9",
     "canvas-sketch-util": "^1.10.0",
